fix: z-index

--- a/pragma-ui/src/components/Landing/styles.module.scss
+++ b/pragma-ui/src/components/Landing/styles.module.scss
@@ -50,7 +50,7 @@
     backdrop-filter: blur(12.5px);
     overflow: hidden;
     max-width: 100%;
-    z-index: 10;
+    z-index: 2;
     position: inherit;
 }
 
